- add create/drop database methods to h2 adapter (sahglie)
- Use connection getDatabaseProductName instead of getClass.getName
  when detecting JNDI dialects (Denis Odorcic)
- ACTIVERECORD_JDBC-146: Fix create_table to not append encoding (Marc Slemko)
- All green on SQLite3 Rails master ActiveRecord tests
- ACTIVERECORD_JDBC-140: Sync postgres add/change column code from Rails master

== 1.0.3 (11/29/10)

- ACTIVERECORD_JDBC-143: Implement table_exists? fixing association
  table names with schema prefixes
- Cleanup of column code for hsqldb (Denis Odorcic)
- Rails 3.0.3 support - add Arel 2 visitors for all adapters
- Fix MySQL date types to not have limits (Chris Lowder)
- ACTIVERECORD_JDBC-141: Better schema support in H2

== 1.0.2

- ACTIVERECORD_JDBC-134: Fix conflicting adapter/column superclasses
- ACTIVERECORD_JDBC-135: Fix regression on PG with boolean and :limit
- Slew of Derby fixes courtesy of Denis Odorcic

== 1.0.1

- Fix db:test:purge issue affecting all adapters in 1.0.0 due to
  incorrect fix to JRUBY-5081 in 8b4b9c5

== 1.0.0

- Thanks to David Kellum, Dmitry Denisov, Dwayne Litzenberger, Gregor
  Schmidt, James Walker, John Duff, Joshua Suggs, Nicholas J Kreucher,
  Peter Donald, Geoff Longman, Uwe Kubosch, Youhei Kondou, Michael
  Pitman, Alex B, and Ryan Bell for their contributions to this
  release.
- BIG set of DB2 updates (Thanks Nick Kreucher)
- Deprecate jdbc_adapter/rake_tasks
- (1.0.0.beta1)
- Make database-specific extensions only load when necessary
- Allow for discovery of database extensions outside of ar-jdbc
  proper. This should allow for custom database development to be
  developed and released without relying on AR-JDBC core.
- Get AR's own tests running as close to 100% as possible. MySQL is
  currently 100%, SQLite3 is close.
- JRUBY-4876: Bump up Derby's max index name length (Uwe Kubosch)
- (1.0.0.beta2)
- 98 commits since beta1
- MSSQL updates from dlitz and realityforge